# llmx

./: README.md  claude-plugin.json  pyproject.toml  skill.md
docs/superpowers/plans/: 2026-04-21-llmx-implementation.md
docs/superpowers/specs/: 2026-04-21-llmx-design.md
src/llmx/: config.py  dag.py  executor.py  fallback.py  server.py  wizard.py
src/llmx/providers/: __init__.py  base.py  gemini.py  groq.py  ollama.py  openai.py  openrouter.py
tests/: test_config.py  test_dag.py  test_executor.py  test_fallback.py  test_integration.py  test_providers.py
