[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llmx"
version = "0.1.0"
description = "Multi-LLM orchestrator plugin for Claude Code"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "rich>=13.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "mcp>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]

[tool.hatch.build.targets.wheel]
packages = ["src/llmx"]

[tool.pytest.ini_options]
testpaths = ["tests"]
